--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,8 @@ nav:
   - 首页: index.md
   - Bookkeeping:
     - QBO: quickbooks/QBO.md
+  - EA Part1:
+    - Filing Requirements: EA_Part1/1_filing_requirements.md
 
 markdown_extensions:
   - attr_list
